Week-5/tribute.css
/* I am so sleepy rn*/

/* Background Base */
body { font-family: 'Inter', Arial, sans-serif;
        background-color: #89aeb4;
        margin: 0;
        padding: 20px; }

/* Title Style */

h1 { font-family: 'Poppins', sans-serif;
    font-size: 40px;
    text-align: center;}

figure { margin: 20px auto;
    padding: 10px;
    max-width: 500px;
    border: 3px solid #6da3ab;
    background-color: white; }

/* image settings */

img { width: 100%; }


figcaption { font-size: 14px;}


main { max-width: 700px;
margin: 0 auto; }


section { background-color: #d8e1e3;
margin: 30px 0;
padding: 20px;
border-radius: 15px;}


h2 { background-color:#6da3ab;
    color: white;
    padding: 8px;
    text-align: center;
    border-radius: 10px; }


    ul{ padding-left: 20px; }
    li{ margin-bottom: 10px; }

    blockquote { text-align: center;
    font-style: italic; }

    footer { text-align: center;
    margin-top: 30px;}

